Migrating from the custom assembly (that worked) to using maven-shade-plugin (didn't work yet...)